Fixed memory allocation bugs. Probably this patch should fix bug #31725.